--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,21 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Playfair Display', serif;
   background-image: url('../image/fundo.png'); /* Substitua pelo caminho da sua imagem */
   background-size: cover; /* Faz com que a imagem cubra toda a tela */
   background-position: center center; /* Centraliza a imagem */
   background-attachment: fixed; /* A imagem fica fixa durante o scroll */
   color: white; /* Cor do texto */
   overflow: hidden;
+}
+
+
+nav a {
+  color: #0D0D0D;
+  font-size: 1rem;
+  text-transform: uppercase;
+  padding: 0.5rem;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .relative-flex-column {
@@ -74,3 +84,6 @@ body {
   .categorias:hover{
     background-color: #203d15c4;
   }
+
+  
+
