--- a/css/categoria.css
+++ b/css/categoria.css
@@ -6,6 +6,10 @@ body {
     background-color: #f5f5f5; 
 }
 
+.categorias_box{
+color: #73513D;
+}
+
 .zoom-container {
     overflow: hidden;
    }
