--- a/css/loja.css
+++ b/css/loja.css
@@ -5,6 +5,34 @@ body {
     overflow-x: hidden; 
     background-color: #f5f5f5; 
 }
+#cart {
+    position: fixed;
+    top: 20%;
+    right: 20px;
+    width: 300px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: none;
+  }
+  
+  #cart-items {
+    max-height: 300px;
+    overflow-y: auto;
+  }
+  
+  #checkout {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  #checkout:hover {
+    background-color: #218838;
+  }
+  
 
 .zoom-container {
     overflow: hidden;
