--- a/css/promocao.css
+++ b/css/promocao.css
@@ -214,11 +214,11 @@ button:hover {
       color: #fff;
   }
   
-  /* Estilo para ícones de pesquisa e usuário */
   .fas {
-      color: #73513D;
-      font-size: 1.25rem;
-  }
+    color: #73513D;
+    display: flex;
+    align-items: center;
+}
   
   /* Responsividade para telas menores */
   @media (max-width: 768px) {
